# blog

./: .gitignore  Cargo.toml  Dioxus.toml  LICENSE  Makefile  README.md  index.html
assets/: main.css  output.css  robots.txt  sitemap.xml
docs/blog/: book.toml
docs/blog/src/: SUMMARY.md  all-you-have-access-to-is-knowledge-and-tools-never-intelligence.md  an-empty-life-filled-with-constant-suffering.md  announcing-kevin-rs.md  as-engineers-llms-should-pay-us-for-tokens-usage.md  christianity-makes-perfect-sense.md  genuine-intelligence-will-never-emerge-from-neural-networks.md  it-is-always-the-russians.md  knowledge-and-intelligence-are-mutually-exclusive.md  language-is-limited-asi-is-impossible.md  llms-are-usefull-lmms-will-break-reality.md  llms-destroyed-the-internet-lmms-will-make-it-alive.md  mathematical-equations-are-multimodal-by-default.md  pharaohs-were-the-first-to-achieve-asi.md  rethinking-arc-agi.md  technology-has-destroyed-my-livelihood.md  the-penguins-are-already-sentient-your-neural-network-is-just-a-distraction.md  training-is-an-evil-concept-lmms-eliminates-it-altogether.md  who-am-i.md
i18n/ar/: base.json
i18n/en/: base.json
i18n/es/: base.json
i18n/fr/: base.json
images/: manifest.json
src/: app.rs  blog.rs  components.rs  features.rs  header.rs  hero.rs  language.rs  main.rs  router.rs  theme.rs
src/blog/: router_blog.rs
src/components/: banner.rs  blog.rs  features.rs  footer.rs  mod.rs  team.rs  testimonials.rs
src/pages/: blog.rs  home.rs  landing.rs
static/: robots.txt  sitemap.xml
styles/: index.css
(+16 files in other folders)
